style: change wrapper width from 100vw to 100% to fix mobile responsive overflow

--- a/style.css
+++ b/style.css
@@ -1395,7 +1395,7 @@ section {
         position: absolute;
         top: 0;
         left: 0;
-        width: 100vw;
+        width: 100%;
         height: 100vh;
         margin: 0;
         z-index: 1;
